--- a/products.html
+++ b/products.html
@@ -38,7 +38,10 @@
         </button>
       </form>
     </nav>
-    <a class="menu__login" href="login.html"><img src="assets/user_search_fill.png" alt="login-icon">Login</a>
+    <div class="menu__login">
+      <a class="menu__login__btn" href="login.html"><img src="assets/user_search_fill.png" alt="login-icon">Login/SignIn</a>
+      <a class="menu__login__account" href="account.html"><img src="assets/user_search_fill.png" alt="login-icon"></a>
+    </div>
   </section>
   <!-- .-------------------------------------------------productos -->
   <section class="product">
