fixing message's color for regist user

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="title__offer">
       <h2>Agosto promocional</h2>
       <h3>Productos seleccionados con hasta 33% de descuento.</h3>
-      <a href="www.google.com">Consolas</a>
+      <a href="#">Consolas</a>
     </div>
   </section>
   <!-- ---------------------------------------------stock products -->
