add repeat password field, showPass function

--- a/login.html
+++ b/login.html
@@ -101,6 +101,21 @@
           id="passwordRegist"
           data-Regist-input-password
         />
+        <button class="access__Regist__form__input__eye">
+          <img src="assets/eye_close.png" alt="eyeClose-icon">
+        </button>
+      </div>
+      <div class="access__Regist__form__input">
+        <label data-Regist-label-passwordRepeat for="passwordRepeatRegist">Repite el Password</label>
+        <input
+          type="password"
+          name="passwordRepeatRegist"
+          id="passwordRepeatRegist"
+          data-Regist-input-passwordRepeat
+        />
+        <button class="access__Regist__form__input__eye">
+          <img src="assets/eye_close.png" alt="eyeClose-icon">
+        </button>
       </div>
       <button data-Regist-btn disabled type="submit" class="access__Regist__form__btn">
         Registrarse
