add random products in home page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
           <li><a onclick="menuSlide()" href="index.html"><img src="assets/homeIcon.png" alt="home-icon">Home</a></li>
           <li><a onclick="menuSlide()" href="products.html"><img src="assets/boxIcon.png" alt="box-icon">Productos</a></li>
           <li><a onclick="menuSlide()" href="about.html"><img src="assets/groupIcon.png" alt="group-icon">Nosotros</a></li>
-          <li><a onclick="menuSlide()" href="about.html"><img src="assets/phoneIcon.png" alt="phone-icon">Contacto</a></li>
+          <li><a onclick="menuSlide()" href="addProducts.html"
+            ><img src="assets/add-icon.png" alt="phone-icon" />Add
+            Product</a
+          ></li>
         </ul>
         <div onclick="menuSlide()"></div>
       </div>
@@ -108,14 +111,25 @@
   <!-- -----------------------------------------contact -->
   <section class="contact">
     <div class="contact__logo">
-      <img src="assets/aluraLogo.png" alt="alura-logo">
-      <p>Somos una tienda en l&iacute;nea apasionada por los Funkos y dedicada a proporcionar a los coleccionistas una experiencia &uacute;nica.</p>
+      <img src="assets/aluraLogo.png" alt="alura-logo" />
+      <p>
+        Somos una tienda en l&iacute;nea apasionada por los Funkos y dedicada
+        a proporcionar a los coleccionistas una experiencia &uacute;nica.
+      </p>
       <div class="contact__logo__social">
-        <a href="#"><img src="assets/face-icon.png" alt="facebook-icon"></a>
-        <a href="#"><img src="assets/whatsapp_icon.png" alt="whatsapp-icon"></a>
-        <a href="#"><img src="assets/insta_icon.png" alt="instagram-icon"></a>
-        <a href="#"><img src="assets/telegram-icon.png" alt="telegram-icon"></a>
-        <a href="#"><img src="assets/twitter-icon.png" alt="twitter-icon"></a>
+        <a href="#"><img src="assets/face-icon.png" alt="facebook-icon" /></a>
+        <a href="#"
+          ><img src="assets/whatsapp_icon.png" alt="whatsapp-icon"
+        /></a>
+        <a href="#"
+          ><img src="assets/insta_icon.png" alt="instagram-icon"
+        /></a>
+        <a href="#"
+          ><img src="assets/telegram-icon.png" alt="telegram-icon"
+        /></a>
+        <a href="#"
+          ><img src="assets/twitter-icon.png" alt="twitter-icon"
+        /></a>
       </div>
     </div>
     <nav class="contact__nav">
@@ -123,17 +137,44 @@
       <ul class="contact__nav__list">
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Productos</a></li>
-        <li><a href="about.html">Contacto</a></li>
         <li><a href="about.html">Nosotros</a></li>
       </ul>
     </nav>
     <div class="contact__info">
       <h3>Informaci&oacute;n</h3>
       <ul class="contact__info__list">
-        <li><a href="https://api.whatsapp.com/send?phone=51952345678" target="_blank"><img src="assets/whatsappFill-icon.png" alt="whatsapp-icon">+51952345678</a></li>
-        <li><a href="mailto:aluraGeek@alura.com"><img src="assets/mailbox_fill-icon.png" alt="mail-icon">aluraGeek@alura.com</a></li>
-        <li><a href="https://maps.google.com/maps?q=-18.045571151586486, -70.25689159706033" target="_blank"> <img src="assets/location_fill-icon.png" alt="map-icon">Av. Isabel La Cat&oacute;lica 1506 Centro Comercial Gema Int. 301-302</a></li>
-        <li><img src="assets/time_fill-icon.png" alt="timer-icon">Lun a S&aacute;b de 11:00 AM - 7:00 PM</li>
+        <li>
+          <a
+            href="https://api.whatsapp.com/send?phone=51934842747"
+            target="_blank"
+            ><img
+              src="assets/whatsappFill-icon.png"
+              alt="whatsapp-icon"
+            />+51934842747</a
+          >
+        </li>
+        <li>
+          <a href="mailto:machicadogomezalexander@gmail.com"
+            ><img
+              src="assets/mailbox_fill-icon.png"
+              alt="mail-icon"
+            />machicadogomezalexander@gmail.com</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://maps.google.com/maps?q=-18.045571151586486, -70.25689159706033"
+            target="_blank"
+          >
+            <img src="assets/location_fill-icon.png" alt="map-icon" />Av.
+            Isabel La Cat&oacute;lica 1506 Centro Comercial Gema Int.
+            301-302</a
+          >
+        </li>
+        <li>
+          <img src="assets/time_fill-icon.png" alt="timer-icon" />Lun a
+          S&aacute;b de 11:00 AM - 7:00 PM
+        </li>
       </ul>
     </div>
     <div class="contact__customService">
@@ -141,19 +182,27 @@
       <ul class="contact__customService__list">
         <li><a href="#">Mi cuenta</a></li>
         <li><a href="#">Pol&iacute;ticas de privacidad</a></li>
-        <li><a href="#">Pol&iacute;tica de env&iacute;o y devoluciones</a></li>
+        <li>
+          <a href="#">Pol&iacute;tica de env&iacute;o y devoluciones</a>
+        </li>
         <li><a href="#">Libro de reclamaciones</a></li>
       </ul>
     </div>
     <div class="contact__formBox">
       <h3>Cont&aacute;ctanos</h3>
       <form class="contact__formBox__form" method="get">
-        <input type="email" placeholder="Email" required>
-        <textarea name="message" id="message" rows="5" required placeholder="Escribe tu mensaje"></textarea>
+        <input type="email" placeholder="Email" required />
+        <textarea
+          name="message"
+          id="message"
+          rows="5"
+          required
+          placeholder="Escribe tu mensaje"
+        ></textarea>
         <button type="submit">Enviar</button>
       </form>
     </div>
-    <footer class="contact__footer"5>
+    <footer class="contact__footer" 5>
       Eccomerce CRUD Desarrollado por un Alexander Machicado Gomez-2023.
     </footer>
   </section>
