change contact info

--- a/about.html
+++ b/about.html
@@ -42,8 +42,9 @@
               >
             </li>
             <li>
-              <a onclick="menuSlide()" href="about.html"
-                ><img src="assets/phoneIcon.png" alt="phone-icon" />Contacto</a
+              <a onclick="menuSlide()" href="addProducts.html"
+                ><img src="assets/add-icon.png" alt="phone-icon" />Add
+                Product</a
               >
             </li>
           </ul>
@@ -131,7 +132,6 @@
         <ul class="contact__nav__list">
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Productos</a></li>
-          <li><a href="about.html">Contacto</a></li>
           <li><a href="about.html">Nosotros</a></li>
         </ul>
       </nav>
@@ -140,20 +140,20 @@
         <ul class="contact__info__list">
           <li>
             <a
-              href="https://api.whatsapp.com/send?phone=51952345678"
+              href="https://api.whatsapp.com/send?phone=51934842747"
               target="_blank"
               ><img
                 src="assets/whatsappFill-icon.png"
                 alt="whatsapp-icon"
-              />+51952345678</a
+              />+51934842747</a
             >
           </li>
           <li>
-            <a href="mailto:aluraGeek@alura.com"
+            <a href="mailto:machicadogomezalexander@gmail.com"
               ><img
                 src="assets/mailbox_fill-icon.png"
                 alt="mail-icon"
-              />aluraGeek@alura.com</a
+              />machicadogomezalexander@gmail.com</a
             >
           </li>
           <li>
