fix animation error

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <section class="info">
     <h2>Tienda</h2>
     <div class="info__card">
-      <img src="/assets/card-icon.png" alt="card-icon">
+      <img src="assets/card-icon.png" alt="card-icon">
       <div class="info__card__description">
         <h3>Pagos r&aacute;pidos y seguros</h3>
         <p>Como nos importa tu comodidad y seguridad contamos distintos medios de pago como lo son: mercado pago y transferencias bancarias.</p>
@@ -212,6 +212,6 @@
     </a>
   </section>
   <script type="module" src="./dist/main.js"></script>
-  <script src="/src/animation.js"></script>
+  <script src="animation.js"></script>
 </body>
 </html>
