fix route animations

--- a/productDetail.html
+++ b/productDetail.html
@@ -154,6 +154,6 @@
     </a>
   </section>
   <script type="module" src="./dist/main.js"></script>
-  <script src="/src/animation.js"></script>
+  <script src="animation.js"></script>
 </body>
 </html>
