--- a/products.html
+++ b/products.html
@@ -164,7 +164,7 @@
       <img src="assets/up_icon.png" alt="up-icon">
     </a>
   </section>
-  <script src="src/animation.js"></script>
+  <script src="animation.js"></script>
   <script type="module" src="dist/main.js"></script>
 </body>
 </html>
