--- a/about.html
+++ b/about.html
@@ -207,6 +207,6 @@
       </a>
     </section>
     <script type="module" src="./dist/main.js"></script>
-    <script src="/src/animation.js"></script>
+    <script src="animation.js"></script>
   </body>
 </html>
