--- a/addProducts.html
+++ b/addProducts.html
@@ -193,6 +193,6 @@
     </a>
   </section>
   <script type="module" src="./dist/main.js"></script>
-  <script src="/src/animation.js"></script>
+  <script src="animation.js"></script>
 </body>
 </html>
