--- a/account.html
+++ b/account.html
@@ -199,7 +199,7 @@
 </section>
   <section class="btnUp">
     <a href="#alura">
-      <img src="assets/up_icon.png" alt="up-icon">
+      <img src="assets/up_icon.png" alt="up-icons">
     </a>
   </section>
   <script src="animation.js"></script>
