fixing image card sizing

--- a/products.html
+++ b/products.html
@@ -52,7 +52,7 @@
     <div class="product__box">
       <div class="product__box__card">
         <div class="product__box__card__add" title="Añadir Producto">
-          <a href="/addProducts.html">
+          <a href="./addProducts.html">
             <img src="assets/circle-icon.png" alt="circle-icon">
           </a>
         </div>
