add email verification to login

--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
         </ul>
         <div onclick="menuSlide()"></div>
       </div>
-      <form class="menu__nav__search" method="GET">
-        <input type="text" placeholder="¿Que deseas buscar?">
+      <form class="menu__nav__search">
+        <input type="text" placeholder="¿Que deseas buscar?" disabled>
         <button type="submit"><img src="assets/desktopSearch-icon.png" alt="search-icon">
         </button>
+        <div class="menu__nav__search__results">
+          
+        </div>
       </form>
     </nav>
     <div class="menu__login">
