--- a/products.html
+++ b/products.html
@@ -36,9 +36,12 @@
         <div onclick="menuSlide()"></div>
       </div>
       <form class="menu__nav__search" method="GET">
-        <input type="text" placeholder="¿Que deseas buscar?">
+        <input disabled disabled type="text" placeholder="¿Que deseas buscar?">
         <button type="submit"><img src="assets/desktopSearch-icon.png" alt="search-icon">
         </button>
+        <div class="menu__nav__search__results">
+          
+        </div>
       </form>
     </nav>
     <div class="menu__login">
